feat: Add directory exclusion system for README index
- Add EXCLUDE_DIRS_DEFAULT for system directories (css, js, errors)
- Add EXCLUDE_DIRS_CUSTOM for user-defined exclusions
- Implement should_exclude() function in entrypoint.sh
- Update .env-example with exclusion variables
- Directories excluded from auto-generated README.md index

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,11 @@
 # DocsServe Configuration
 
+# Environment Mode
+# Determines which Docker Compose configuration to use
+# - production: Standard deployment (default)
+# - development: Enables hot-reload for nginx config (mounts default.conf as volume)
+ENVIRONMENT=production
+
 # Basic Authentication
 # Format: PROJECT_NAME:username:password (separated by colons)
 # Multiple projects can be defined, one per line
@@ -18,3 +24,15 @@ AUTH_GLOBAL=
 
 # Example with global auth enabled:
 # AUTH_GLOBAL=admin:globalpassword
+
+# Directory Exclusions
+# These directories will be excluded from the auto-generated README.md index
+
+# Default system directories to exclude (space-separated)
+# These are typically static assets and error pages
+EXCLUDE_DIRS_DEFAULT=css js errors
+
+# Custom directories to exclude (space-separated)
+# Use this for ultra-secret projects or any custom directories you want to hide from the index
+# Example: EXCLUDE_DIRS_CUSTOM=secret-project confidential another-hidden-dir
+EXCLUDE_DIRS_CUSTOM=
