chore: Update gitignore configuration
- Exclude commits.sh from version control
- Maintain web/ directory structure exceptions

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -29,8 +29,22 @@ server {
         try_files $uri $uri/ =404;
     }
 
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
+    # Custom error pages
+    error_page 404 /401.html;
+    error_page 403 /403.html;
+    # error_page 500 502 503 504 /50x.html;
+
+    # # Locations for error pages
+    # location = /401.html {
+    #     internal;
+    # }
+
+    # location = /403.html {
+    #     internal;
+    # }
+
+    # location = /50x.html {
+    #     internal;
+    # }
 }
 
