Add: Resaltado de código con Prism
- Se soportan la mayoría de lenguajes de programación (ej. Javascript, Typescript, PHP, etc.)
- Detección automática y loading con caché.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 .env
 .secrets
-
-web
-!web/index.html
-!web/demo
-!web/50x.html
-!web/REAMDME
-!web/js
-!web/css
-!web/errors
-!web/_404.md
-
 commits.sh
+
+web/README.md
+web/_navbar.md
