--- a/docker/default.conf
+++ b/docker/default.conf
@@ -3,11 +3,8 @@ server {
     listen  [::]:80;
     server_name  _;
 
-    root   /app;
+    index index.html; 
 
-    index index.html;
-
-    # Correct MIME types for Markdown files
     types {
         text/markdown md;
         text/plain txt;
@@ -17,34 +14,25 @@ server {
         application/json json;
     }
 
-    # Incluir configuraciones de seguridad/autenticación
-    # Los archivos se generan dinámicamente en el entrypoint según variables de entorno
     include /etc/nginx/security/*.conf;
 
-    location / {
+    # Redireccionar la raíz a /web/
+    location = / {
+        return 301 $scheme://$http_host/web/;
+    }
 
-        autoindex on;                 # <--- Habilita listado
-        autoindex_exact_size off;     # Opcional: tamaños legibles
-        autoindex_localtime on;       # Opcional: fechas legibles
+    # Reescribir archivos markdown de /web/* a /*
+    location ~ ^/web/(.+\.(md|MD))$ {
+        root /app;
+        try_files /$1 =404;
+    }
+
+    location / {
+        root /app;
+        autoindex off;  # Deshabilita listado de directorios
         try_files $uri $uri/ =404;
     }
 
-    # Custom error pages
     error_page 404 /401.html;
     error_page 403 /403.html;
-    # error_page 500 502 503 504 /50x.html;
-
-    # # Locations for error pages
-    # location = /401.html {
-    #     internal;
-    # }
-
-    # location = /403.html {
-    #     internal;
-    # }
-
-    # location = /50x.html {
-    #     internal;
-    # }
 }
-
