compose: Actualización de compose.yml y .env-example

--- a/.env-example
+++ b/.env-example
@@ -9,28 +9,57 @@ ENVIRONMENT=production
 # Basic Authentication
 # Format: PROJECT_NAME:username:password (separated by colons)
 # Multiple projects can be defined, one per line
-# Example:
-# AUTH_PROJECT1=myproject:admin:securepassword123
-# AUTH_PROJECT2=anotherproject:viewer:anotherpass456
+#
+# VARIABLE NAMING CONVENTION (recommended for organization):
+#   Pattern: AUTH_PROJECT_[PROJECTNAME]_[USERNAME]
+#   Example: AUTH_PROJECT_MYAPP_ADMIN, AUTH_PROJECT_DOCS_VIEWER
+#
+#   Note: Any variable starting with "AUTH_PROJECT" will be processed.
+#   Using descriptive names helps maintain order and enables quick searching.
+#   You can also use simpler names like AUTH_PROJECT1, AUTH_PROJECT2, etc.
+#
+# SECURITY RECOMMENDATION: Use hashed passwords instead of plaintext
+# Nginx supports Apache htpasswd-compatible password hashes (crypt, SHA, bcrypt)
+#
+# Generate hashed passwords using openssl:
+#   SHA-512 (recommended):  openssl passwd -6 'yourpassword'
+#   SHA-256:                openssl passwd -5 'yourpassword'
+#   bcrypt:                 openssl passwd -apr1 'yourpassword'
+#
+# Example with plaintext:
+# AUTH_PROJECT_MYPROJECT_ADMIN=myproject:admin:securepassword123
+#
+# Example with hashed password (SHA-512):
+# AUTH_PROJECT_MYPROJECT_ADMIN=myproject:admin:$6$rounds=5000$salt$hashedpasswordhere
+#
+# Multiple projects can be defined, one per line
+# Examples:
+# AUTH_PROJECT_DOCS_ADMIN=documentation:admin:securepassword123
+# AUTH_PROJECT_API_VIEWER=api-reference:viewer:anotherpass456
+# AUTH_PROJECT_INTERNAL_DEVTEAM=internal-docs:devteam:teampassword
 
 # Define your projects here:
-AUTH_PROJECT1=example-project:admin:changeme
-AUTH_PROJECT2=demo-docs:user:password123
+AUTH_PROJECT_EXAMPLEPROJECT_ADMIN=example-project:admin:changeme
+AUTH_PROJECT_DEMODOCS_USER=demo-docs:user:password123
 
 # Global authentication (optional)
 # If set, this will protect ALL paths that don't have specific project auth
 # Leave empty to disable global auth
+# Also supports hashed passwords (use openssl passwd -6 'yourpassword')
 AUTH_GLOBAL=
 
-# Example with global auth enabled:
+# Example with global auth enabled (plaintext):
 # AUTH_GLOBAL=admin:globalpassword
+#
+# Example with global auth enabled (hashed):
+# AUTH_GLOBAL=admin:$6$rounds=5000$salt$hashedpasswordhere
 
 # Directory Exclusions
 # These directories will be excluded from the auto-generated README.md index
 
 # Default system directories to exclude (space-separated)
 # These are typically static assets and error pages
-EXCLUDE_DIRS_DEFAULT=css js errors
+EXCLUDE_DIRS_DEFAULT=web
 
 # Custom directories to exclude (space-separated)
 # Use this for ultra-secret projects or any custom directories you want to hide from the index
